; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_xpt.c_xpt_destroy_device.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_xpt.c_xpt_destroy_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cam_ed = type { i32 }

@M_CAMDEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @xpt_destroy_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xpt_destroy_device(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.cam_ed*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.cam_ed*
  store %struct.cam_ed* %7, %struct.cam_ed** %5, align 8
  %8 = load %struct.cam_ed*, %struct.cam_ed** %5, align 8
  %9 = getelementptr inbounds %struct.cam_ed, %struct.cam_ed* %8, i32 0, i32 0
  %10 = call i32 @mtx_lock(i32* %9)
  %11 = load %struct.cam_ed*, %struct.cam_ed** %5, align 8
  %12 = getelementptr inbounds %struct.cam_ed, %struct.cam_ed* %11, i32 0, i32 0
  %13 = call i32 @mtx_destroy(i32* %12)
  %14 = load %struct.cam_ed*, %struct.cam_ed** %5, align 8
  %15 = load i32, i32* @M_CAMDEV, align 4
  %16 = call i32 @free(%struct.cam_ed* %14, i32 %15)
  ret void
}

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @mtx_destroy(i32*) #1

declare dso_local i32 @free(%struct.cam_ed*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
